# utf-8

./: CMakeLists.txt  CMakePresets.json  LICENSE  README.md
src/: CMakeLists.txt  utf-8.h
src/utf-8/: LICENSE  decoder.h
test/: CMakeLists.txt  utf-8_decoder_test.cpp  utf-8_test.cpp
